tests/invalid/if_condition_void_function_value/main.py
def helper() -> None:
    return


def run_case() -> None:
    if helper:
        print("bad")


if __name__ == "__main__":
    run_case()
